finish Category service